--- a/Phase 2/Makefile
+++ b/Phase 2/Makefile
@@ -1,4 +1,4 @@
-# Makefile for "Fury of Dracula": The Hunt
+#Makefile for "Fury of Dracula": The Hunt
 
 # change these to suit your local C environment
 CC = gcc
@@ -8,7 +8,7 @@ BINS = dracula hunter
 # add any other *.o files that your system requires
 # (and add their dependencies below after DracView.o)
 # if you're not using Map.o or Places.o, you can remove them
-OBJS = GameView.o Map.o Places.o
+OBJS = GameView.o Map.o Places.o Players.o stack.o
 # add whatever system libraries you need here (e.g. -lm)
 LIBS =
 
@@ -26,12 +26,13 @@ hunterPlayer.o : player.c Game.h HunterView.h hunter.h
 dracula.o : dracula.c Game.h DracView.h
 hunter.o : hunter.c Game.h HunterView.h
 Places.o : Places.c Places.h
-Map.o : Map.c Map.h Places.h
-GameView.o : GameView.c Globals.h GameView.h
-HunterView.o : HunterView.c Globals.h HunterView.h
-DracView.o : DracView.c Globals.h DracView.h
+Players.o : Players.c Players.h
+stack.o : stack.c stack.h
+Map.o : Map.c Map.h Places.o stack.h GameView.o
+GameView.o : GameView.c Globals.h GameView.o Players.o
+HunterView.o : HunterView.c Globals.h HunterView.h Players.o Places.o GameView.o
+DracView.o : DracView.c Globals.h DracView.h Players.o Map.o GameView.o Places.o
 # if you use other ADTs, add dependencies for them here
 
 clean :
 	rm -f $(BINS) *.o core
-
